--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
-streamlit
-pyrebase4
-pandas
-altair
-joblib
-scikit-learn
-nltk
-python-dotenv
+# Core
+streamlit==1.40.1
+pyrebase4==4.8.0
+pandas==2.0.3
+altair==5.4.1
+joblib==1.4.2
+scikit-learn==1.3.2
+nltk==3.9.1
+python-dotenv==1.0.1
 
 # HuggingFace + dependencies
-transformers
-torch
-sentencepiece
+transformers==4.56.2
+torch==2.8.0
+sentencepiece==0.2.1
+huggingface-hub==0.35.0
+safetensors==0.5.3
+tokenizers==0.20.3
 
-
-
-altair==5.4.1
+# Supporting libraries
 attrs==25.3.0
 blinker==1.8.2
 cachetools==5.5.2
@@ -31,27 +33,21 @@ gitdb==4.0.12
 gitpython==3.1.45
 googleapis-common-protos==1.70.0
 httplib2==0.31.0
-huggingface-hub==0.35.0
 idna==3.10
 importlib-resources==6.4.5
 jinja2==3.1.6
-joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 jwcrypto==1.5.6
-markdown-it-py==3.0.0
+markdown-it-py==4.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 mpmath==1.3.0
-narwhals==1.42.1
 networkx==3.1
-nltk==3.9.1
 numpy==1.24.4
 oauth2client==4.1.3
 packaging==24.2
-pandas==2.0.3
 pillow==10.4.0
-pkgutil-resolve-name==1.3.10
 protobuf==5.29.5
 pyarrow==17.0.0
 pyasn1==0.6.1
@@ -61,40 +57,21 @@ pycryptodome==3.23.0
 pydeck==0.9.1
 pygments==2.19.2
 pyparsing==3.1.4
-Pyrebase4==4.8.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
 python-jwt==4.1.0
 pytz==2025.2
 PyYAML==6.0.2
-referencing==0.35.1
 regex==2024.11.6
 requests==2.32.4
 requests-toolbelt==0.10.1
-rich==13.9.4
-rpds-py==0.20.1
+rich==14.1.0
 rsa==4.9.1
-safetensors==0.5.3
-scikit-learn==1.3.2
 scipy==1.10.1
-sentencepiece==0.2.0
 six==1.17.0
-smmap==5.0.2
-streamlit==1.40.1
-sympy==1.13.3
-tenacity==9.0.0
 threadpoolctl==3.5.0
-tokenizers==0.20.3
-toml==0.10.2
-torch==2.4.1
 tornado==6.4.2
-tqdm==4.67.1
-transformers==4.46.3
 typing-extensions==4.13.2
 tzdata==2025.2
 urllib3==1.26.20
 watchdog==4.0.2
 zipp==3.20.2
-
-
-
